generated/nixidy/prod/immich/Deployment-immich-machine-learning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: immich-machine-learning
    app.kubernetes.io/instance: immich-machine-learning
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: immich-machine-learning
  name: immich-machine-learning
  namespace: dotfiles
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: immich-machine-learning
      app.kubernetes.io/instance: immich-machine-learning
      app.kubernetes.io/name: immich-machine-learning
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: immich-machine-learning
        app.kubernetes.io/instance: immich-machine-learning
        app.kubernetes.io/name: immich-machine-learning
    spec:
      automountServiceAccountToken: true
      containers:
        - image: ghcr.io/immich-app/immich-machine-learning:v1.135.3
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: immich-machine-learning
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /cache
              name: cache
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: immich-machine-learning
