generated/nixidy/prod/immich/Service-immich-machine-learning.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: immich-machine-learning
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: immich-machine-learning
    app.kubernetes.io/service: immich-machine-learning
  name: immich-machine-learning
  namespace: dotfiles
spec:
  ports:
    - name: http
      port: 3003
      protocol: TCP
      targetPort: 3003
  selector:
    app.kubernetes.io/controller: immich-machine-learning
    app.kubernetes.io/instance: immich-machine-learning
    app.kubernetes.io/name: immich-machine-learning
  type: ClusterIP
