generated/nixidy/prod/immich/Service-immich-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: immich-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: immich-server
    app.kubernetes.io/service: immich-server
  name: immich-server
  namespace: dotfiles
spec:
  ports:
    - name: http
      port: 2283
      protocol: TCP
      targetPort: 2283
    - name: metrics-api
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: metrics-ms
      port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app.kubernetes.io/controller: immich-server
    app.kubernetes.io/instance: immich-server
    app.kubernetes.io/name: immich-server
  type: ClusterIP
