generated/nixidy/prod/immich/HTTPRoute-immich-server.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: immich-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: immich-server
  name: immich-server
  namespace: dotfiles
spec:
  hostnames:
    - immich.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          namespace: dotfiles
          port: 2283
          weight: 1
